# nanocore

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.ps1  build.sh  build_simple.py  debug_test.py  demo.py  install.ps1  install.sh  run.sh  test_expert.py  test_runner.py  test_simple.py  test_vm_simple  test_vm_simple.c  test_working.py
.github/workflows/: build.yml
asm/core/: alu.asm  cache.asm  devices.asm  instructions.asm  interrupts.asm  memory.asm  pipeline.asm  vm.asm
asm/devices/: console.asm
asm/labs/: hello_world.asm
assembler/: nanocore_asm.py
cli/: main.c  nanocore-cli.py
docs/: isa_spec.md
glue/ffi/: Cargo.toml  nanocore_ffi.c
glue/ffi/src/: lib.rs
glue/javascript/: package-lock.json  package.json  tsconfig.json
glue/javascript/src/: index.ts
glue/python/: setup.py
glue/python/examples/: basic_usage.py
glue/python/nanocore/: __init__.py
glue/rust/: Cargo.toml  build.rs
glue/rust/src/: lib.rs
playground/: README.md  index.html  package.json  tailwind.config.js
playground/public/: nanocore-mock.js
playground/scripts/: build-wasm.js
playground/src/: App.tsx  examples.ts  index.css
playground/src/components/: CodeEditor.tsx  ControlPanel.tsx  ExampleSelector.tsx  Icons.tsx  MemoryView.tsx  PerformanceView.tsx  RegisterView.tsx  VMVisualizer.tsx
playground/src/services/: vm.ts
playground/src/wasm/: nanocore.ts
tests/: test_alu.nc  test_basic.asm  test_branches.nc  test_framework.py  test_memory.nc  test_simd.nc
