[package]
name = "nanocore"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for NanoCore VM"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nanocore/nanocore"
repository = "https://github.com/nanocore/nanocore"
readme = "README.md"
keywords = ["vm", "emulator", "assembly", "virtual-machine", "risc"]
categories = ["emulators", "development-tools"]

[dependencies]

[build-dependencies]
cc = "1.0"

[features]
default = []
debug = []